[package]
name = "balances"
version = "0.1.0"
edition = "2021"
authors = ['Leonardo <leonardo@nth.work>']
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
services = {path = "./services"}
actix-web = "4"
serde = { version = "1.0.137", features = ["derive"]}
